--- a/views/home.html
+++ b/views/home.html
@@ -230,7 +230,7 @@
 
         </div>
 
-        <div id="box supprimer" onclick="get_sup();">
+        <div id="box supprimer" onclick="get_valid();">
 
           <img src="/image/bouton-de-suppression-de-la-poubelle.png" id="poubelle"/>
 
@@ -269,6 +269,28 @@
               </div>
 
           </div>
+
+      </div>
+
+      <div id="container validation">
+
+        <div id="box validation">
+
+            <div id="title box validation">
+
+              <div id="text title operation">Etes-vous sur de vouloir supprimer cette operation ?</div>
+
+            </div>
+
+            <div id="button form validation">
+
+              <button type="button" class="button2" onclick="cancel_sup();">Annuler</button>
+
+              <button type="submit" class="button1" onclick="delete_lot();">Valider</button>
+
+            </div>
+
+        </div>
 
       </div>
       <script src="/index.js" async></script>
