--- a/css/operation.css
+++ b/css/operation.css
@@ -1866,3 +1866,23 @@ div[id="box validation de l'operation"] {
   background-color: rgba(255, 255, 255, 0);
   margin-left: 900px;
 }
+div[class="container maitre"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 900px;
+  height: 40px;
+  background-color: red;
+  margin-right: 350px;
+  margin-top: 15px;
+  border-bottom: 3px solid;
+}
+select[id="maitre ouvrage select"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 100%;
+  outline: none;
+  border: none;
+  background-color: #fff;
+}
