--- a/views/home.html
+++ b/views/home.html
@@ -303,7 +303,7 @@
 
               <button type="button" class="button2" onclick="cancel_sup();">Annuler</button>
 
-              <button type="submit" class="button1" onclick="delete_lot();">Valider</button>
+              <button type="submit" class="button1" onclick="get_sup();">Valider</button>
 
             </div>
 
