--- a/views/operation.html
+++ b/views/operation.html
@@ -135,15 +135,13 @@
 
               </div>
 
-              <div class="svg-wrapper">
+              <div class="container maitre">
 
-                <svg height="60" width="820" xmlns="http://www.w3.org/2000/svg">
+                <select id="maitre ouvrage select" name="maitre_ouvrage" class="input maitre">
 
-                  <rect class="shape" id="shape_maitre" height="60" width="820" />
+                  <option id="nothing"></option>
 
-                </svg>
-
-                <input id="text maitre title header of the main box" name="maitre_ouvrage" value="" placeholder="Nom du maitre d'ouvrage" onclick="get_focus_bis()"/>
+                </select>
 
               </div>
 
@@ -169,7 +167,7 @@
 
                     <div id="list of the lot of the operation">
 
-                      <div id="container add lot" onclick="add_lot_to_operation(['Nouveau Lot', 'flex', 'any', '', '', ''])">
+                      <div id="container add lot" onclick="add_lot_to_operation(['Nouveau Lot', 'flex', 'any', '', '', '', 'not'])">
 
                         <img src="/image/add.png" id="add lot"/>
 
@@ -435,7 +433,7 @@
 
                       <span id="title input">Typologie d'operation</span>
 
-                      <select name="Typologie_operation" id="Typologie d'operation" class="input generale">
+                      <select name="Typologie_operation" value="" id="Typologie d'operation" class="input generale">
 
                         <option id="nothing"></option>
 
@@ -479,7 +477,7 @@
 
                           <span id="title input">Nombre d'eleve</span>
 
-                          <input name="Nombre_d'eleve" value="" id="Nombre d'eleve" class="input generale" onkeypress="return verif(event, ',0123456789 ');"/>
+                          <input name="Nombre_d'eleve" value="" id="Nombre d'eleve" class="input generale" onkeypress="return verif(event, '.0123456789 ');"/>
 
                         </div>
 
@@ -487,7 +485,7 @@
 
                           <span id="title input">Nombre de classe (salle d'enseignement)</span>
 
-                          <input name="Nombre_de_classe_(salle_d'enseignement)" value="" id="Nombre de classe" class="input generale" onkeypress="return verif(event, ',0123456789 ');"/>
+                          <input name="Nombre_de_classe_(salle_d'enseignement)" value="" id="Nombre de classe" class="input generale" onkeypress="return verif(event, '.0123456789 ');"/>
 
                         </div>
 
@@ -499,7 +497,7 @@
 
                           <span id="title input">Nombre de salle (poly, spectacle, sport)</span>
 
-                          <input name="Nombre_de_salle_(poly_spectacle_sport)" value="" id="Nombre de salle" class="input generale" onkeypress="return verif(event, ',0123456789 ');"/>
+                          <input name="Nombre_de_salle_(poly_spectacle_sport)" value="" id="Nombre de salle" class="input generale" onkeypress="return verif(event, '.0123456789 ');"/>
 
                         </div>
 
@@ -507,7 +505,7 @@
 
                           <span id="title input">Nombre de logement</span>
 
-                          <input name="Nombre_de_logement" value="" id="Nombre de logement" class="input generale" onkeypress="return verif(event, ',0123456789 ');"/>
+                          <input name="Nombre_de_logement" value="" id="Nombre de logement" class="input generale" onkeypress="return verif(event, '.0123456789 ');"/>
 
                         </div>
 
@@ -519,7 +517,7 @@
 
                           <span id="title input">Nombre de bureaux / autres locaux</span>
 
-                          <input name="Nombre_de_bureaux_/_autres_locaux" value="" id="Nombre de bureaux / autres locaux" class="input generale" onkeypress="return verif(event, ',0123456789 ');"/>
+                          <input name="Nombre_de_bureaux_/_autres_locaux" value="" id="Nombre de bureaux / autres locaux" class="input generale" onkeypress="return verif(event, '.0123456789 ');"/>
 
                         </div>
 
@@ -527,7 +525,7 @@
 
                           <span id="title input">Nombre de chambre</span>
 
-                          <input name="Nombre_de_chambre" value="" id="Nombre de chambre" class="input generale" onkeypress="return verif(event, ',0123456789 ');"/>
+                          <input name="Nombre_de_chambre" value="" id="Nombre de chambre" class="input generale" onkeypress="return verif(event, '.0123456789 ');"/>
 
                         </div>
 
@@ -539,7 +537,7 @@
 
                           <span id="title input">Nombre de commerce</span>
 
-                          <input name="Nombre_de_commerce" value="" id="Nombre de commerce" class="input generale" onkeypress="return verif(event, ',0123456789 ');"/>
+                          <input name="Nombre_de_commerce" value="" id="Nombre de commerce" class="input generale" onkeypress="return verif(event, '.0123456789 ');"/>
 
                         </div>
 
@@ -547,7 +545,7 @@
 
                           <span id="title input">Nombre place de parking Infrastructure</span>
 
-                          <input name="Nombre_place_de_parking_Infrastructure" value="" id="Nombre place de parking Infrastructure" class="input generale" onkeypress="return verif(event, ',0123456789 ');"/>
+                          <input name="Nombre_place_de_parking_Infrastructure" value="" id="Nombre place de parking Infrastructure" class="input generale" onkeypress="return verif(event, '.0123456789 ');"/>
 
                         </div>
 
@@ -559,7 +557,7 @@
 
                           <span id="title input">Nombre de places de parking interieur dans la superstructure</span>
 
-                          <input name="Nombre_de_places_de_parking_interieur_dans_la_superstructure" value="" id="Nombre de places de parking interieur dans la superstructure" class="input generale" onkeypress="return verif(event, ',0123456789 ');"/>
+                          <input name="Nombre_de_places_de_parking_interieur_dans_la_superstructure" value="" id="Nombre de places de parking interieur dans la superstructure" class="input generale" onkeypress="return verif(event, '.0123456789 ');"/>
 
                         </div>
 
@@ -567,7 +565,7 @@
 
                           <span id="title input">Nombre de places de parking exterieur</span>
 
-                          <input name="Nombre_de_places_de_parking_exterieur" value="" id="Nombre de places de parking exterieur" class="input generale" onkeypress="return verif(event, ',0123456789 ');"/>
+                          <input name="Nombre_de_places_de_parking_exterieur" value="" id="Nombre de places de parking exterieur" class="input generale" onkeypress="return verif(event, '.0123456789 ');"/>
 
                         </div>
 
@@ -837,7 +835,7 @@
 
               <span id="title input">Quantite de l'article</span>
 
-              <input name="quantite article" value="" id="quantite modif article" class="ajout d'article" onkeyup="maj_totale_article()" onkeypress="return verif(event, ',0123456789 ');"/>
+              <input name="quantite article" value="" id="quantite modif article" class="ajout d'article" onkeyup="maj_totale_article()" onkeypress="return verif(event, '.0123456789 ');"/>
 
             </div>
 
@@ -845,7 +843,7 @@
 
               <span id="title input">Prix unitaire de l'article</span>
 
-              <input name="prix unitaire article" value="" id="prix unitaire modif article" class="ajout d'article" onkeyup="maj_totale_article()" onkeypress="return verif(event, ',0123456789 ');"/>
+              <input name="prix unitaire article" value="" id="prix unitaire modif article" class="ajout d'article" onkeyup="maj_totale_article()" onkeypress="return verif(event, '.0123456789 ');"/>
 
             </div>
 
@@ -869,7 +867,7 @@
 
               <span id="title input">TVA</span>
 
-              <input name="prix totale article" value="" id="Categorie du site" class="ajout d'article" onkeypress="return verif(event, ',0123456789 %');"/>
+              <input name="prix totale article" value="" id="Categorie du site" class="ajout d'article" onkeypress="return verif(event, '.0123456789 %');"/>
 
             </div>
 
@@ -939,11 +937,11 @@
 
                 <div id="title liste article">
 
+                  <div class="selection liste article" on>Selection</div>
+
                   <div class="nom liste article">Nom</div>
 
                   <div class="unite liste article">Unite</div>
-
-                  <div class="selection liste article" on>Selection</div>
 
                 </div>
 
