--- a/css/home.css
+++ b/css/home.css
@@ -200,6 +200,38 @@
     position: relative;
     border-bottom-color: white;
   }
+  a[id="entreprise page"] {
+    align-items: center;
+    box-sizing: border-box;
+    display: flex;
+    flex-basis: 100%;
+    flex-grow: 1;
+    flex-shrink: 1;
+    justify-content: center;
+    padding-left: 16px;
+    padding-right: 16px;
+    width: 72px;
+    height: 57px;
+    border-bottom: 1px solid;
+    position: relative;
+    border-bottom-color: #fff;
+  }
+  a[id="client page"] {
+    align-items: center;
+    box-sizing: border-box;
+    display: flex;
+    flex-basis: 100%;
+    flex-grow: 1;
+    flex-shrink: 1;
+    justify-content: center;
+    padding-left: 16px;
+    padding-right: 16px;
+    width: 72px;
+    height: 57px;
+    border-bottom: 1px solid;
+    position: relative;
+    border-bottom-color: #fff;
+  }
   img[id="bt button"] {
     align-items: center;
     box-sizing: border-box;
@@ -209,7 +241,49 @@
     justify-content: center;
     position: relative;
   }
+  img[id="entreprise button"] {
+    align-items: center;
+    box-sizing: border-box;
+    display: flex;
+    width: 24px;
+    height: 24px;
+    justify-content: center;
+    position: relative;
+  }
+  img[id="client button"] {
+    align-items: center;
+    box-sizing: border-box;
+    display: flex;
+    width: 24px;
+    height: 24px;
+    justify-content: center;
+    position: relative;
+  }
   div[id="bt text"] {
+    align-self: center;
+    box-sizing: border-box;
+    display: none;
+    right: 150px;
+    flex-basis: 100%;
+    flex-grow: 1;
+    flex-shrink: 1;
+    height: 19.1875px;
+    width: 161px;
+    color: #45BAB8;
+  }
+  div[id="entreprise text"] {
+    align-self: center;
+    box-sizing: border-box;
+    display: none;
+    right: 150px;
+    flex-basis: 100%;
+    flex-grow: 1;
+    flex-shrink: 1;
+    height: 19.1875px;
+    width: 161px;
+    color: #45BAB8;
+  }
+  div[id="client text"] {
     align-self: center;
     box-sizing: border-box;
     display: none;
