--- a/views/home.html
+++ b/views/home.html
@@ -36,6 +36,18 @@
 
             <div id="container text button">
 
+              <a id="text button" href="/entreprise">Entreprise</a>
+
+            </div>
+
+            <div id="container text button">
+
+              <a id="text button" href="/client">Client</a>
+
+            </div>
+
+            <div id="container text button">
+
               <a id="text button">Mon compte</a>
 
             </div>
@@ -84,6 +96,30 @@
                 </div>
 
                 <div id="bt text">Mon compte</div>
+
+              </a>
+
+              <a id="entreprise page" href="/entreprise">
+
+                <div id="box button">
+
+                  <img id="entreprise button" src="/image/entreprise.png" alt="entreprise page">
+
+                </div>
+
+                <div id="entreprise text">Entreprise</div>
+
+              </a>
+
+              <a id="client page" href="/client">
+
+                <div id="box button">
+
+                  <img id="client button" src="/image/client.png" alt="client page">
+
+                </div>
+
+                <div id="client text">Client</div>
 
               </a>
 
