--- a/views/operation.html
+++ b/views/operation.html
@@ -38,6 +38,18 @@
 
             <div id="container text button">
 
+              <a id="text button" href="/entreprise">Entreprise</a>
+
+            </div>
+
+            <div id="container text button">
+
+              <a id="text button" href="/client">Client</a>
+
+            </div>
+
+            <div id="container text button">
+
               <a id="text button">Mon compte</a>
 
             </div>
@@ -86,6 +98,30 @@
                 </div>
 
                 <div id="bt text">Indice BT</div>
+
+              </a>
+
+              <a id="entreprise page" href="/entreprise">
+
+                <div id="box button">
+
+                  <img id="entreprise button" src="/image/entreprise.png" alt="entreprise page">
+
+                </div>
+
+                <div id="entreprise text">Entreprise</div>
+
+              </a>
+
+              <a id="client page" href="/client">
+
+                <div id="box button">
+
+                  <img id="client button" src="/image/client.png" alt="client page">
+
+                </div>
+
+                <div id="client text">Client</div>
 
               </a>
 
@@ -456,6 +492,38 @@
                         <option id="BPU">BPU</option>
 
                       </select>
+
+                    </div>
+
+                  </div>
+
+                  <div class="container 2 input">
+
+                    <div class="1 input">
+
+                      <span id="title input">Exigence Environnementale</span>
+
+                      <input name="Exigence_Environnementale" value="" id="Exigence Environnementale" class="input generale"/>
+
+                    </div>
+
+                    <div class="2 input">
+
+                      <span id="title input">Niveau Performance Environnementale</span>
+
+                      <input name="Niveau_Performance_Environnementale" value="" id="Niveau Performance Environnementale" class="input generale"/>
+
+                    </div>
+
+                  </div>
+
+                  <div class="container 2 input">
+
+                    <div class="1 input">
+
+                      <span id="title input">Niveau Performance Thermique</span>
+
+                      <input name="Niveau_Performance_Thermique" value="" id="Niveau Performance Thermique" class="input generale"/>
 
                     </div>
 
