--- a/views/client.html
+++ b/views/client.html
@@ -7,7 +7,7 @@
 
         <title>Observatoire</title>
 
-        <link rel="stylesheet" href="/css/indice_bt.css">
+        <link rel="stylesheet" href="/css/client.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"/>
         <link rel="website icon" type="png" href="/image/logo_simonneau.png">
@@ -28,9 +28,9 @@
 
             </div>
 
-            <div id="container text button indice_bt">
+            <div id="container text button">
 
-              <a id="text button indice_bt" href="/indice_bt">Indice BT</a>
+              <a id="text button" href="/indice_bt">Indice BT</a>
 
             </div>
 
@@ -40,9 +40,9 @@
 
             </div>
 
-            <div id="container text button">
+            <div id="container text button client">
 
-              <a id="text button" href="/client">Client</a>
+              <a id="text button client" href="/client">Client</a>
 
             </div>
 
@@ -91,7 +91,7 @@
 
                 <div id="box button">
 
-                  <img id="bt button" src="/image/statistique_color.png" alt="indice_bt page">
+                  <img id="bt button" src="/image/statistique.png" alt="indice_bt page">
 
                 </div>
 
@@ -115,7 +115,7 @@
 
                 <div id="box button">
 
-                  <img id="client button" src="/image/client.png" alt="client page">
+                  <img id="client button" src="/image/client_color.png" alt="client page">
 
                 </div>
 
@@ -155,61 +155,65 @@
 
         <div id="main box" onmouseover="slide_left_dashboard();">
 
-            <div id="main_wrap">
+          <div id="main_wrap">
 
-                <div id="body">
+              <div id="body">
 
-                  <div id="main_container">
+                <div id="main_container">
 
-                    <header id="header main box">
+                  <header id="header main box">
 
-                      <div id="box header main box">
+                    <div id="box header main box">
 
-                        <div id="Title">Indice BT</div>
+                      <div id="Title">Clients</div>
 
-                      </div>
+                    </div>
 
-                    </header>
+                  </header>
 
-                    <div id="container Indice">
+                  <div id="container Client">
 
-                        <div id="Box container Indice">
+                      <div id="Box container Client">
 
-                            <div id="Box content Indice">
+                          <div id="Box content Client">
 
-                                <div id="container sorters">
+                              <div id="container sorters">
 
-                                  <div id="indice filter">
+                                <div id="nom filter">
 
-                                     <div id="text">Indice</div>
-
-                                  </div>
-
-                                  <div id="date filter">
-
-                                    <div id="text">Date</div>
-
-                                  </div>
+                                   <div id="text">Nom</div>
 
                                 </div>
 
-                                <div id="List Indice"></div>
+                                <div id="abreviation filter">
 
-                            </div>
+                                  <div id="text">Abreviation</div>
+
+                               </div>
+
+                                <div id="adresse filter">
+
+                                  <div id="text">Adresse</div>
+
+                                </div>
+
+                              </div>
+
+                              <div id="List Client"></div>
 
                           </div>
 
-                    </div>
-
-                    <div id="container submit">
-
-                        <div id="box submit">
-
-                            <button type="button" class="button1" id="button indice_bt" onclick="slide_indice();">Ajouter</button>
-
                         </div>
 
-                    </div>
+                  </div>
+
+                  <div id="container submit">
+
+                      <div id="box submit">
+
+                          <button type="button" class="button1" id="button client" onclick="slide_client();">Ajouter</button>
+
+                      </div>
 
                   </div>
 
@@ -217,56 +221,58 @@
 
               </div>
 
-        </div>
+            </div>
 
-        <nav id="navigation d'ajout d'indice">
+      </div>
 
-            <div id="cancel add">
+      <nav id="navigation d'ajout d'client">
 
-              <img src="/image/close.png" id="cancel" onclick="cancel_slide_indice();"/>
+          <div id="cancel add">
+
+            <img src="/image/close.png" id="cancel" onclick="cancel_slide_client();"/>
+
+          </div>
+
+          <div id="container input ajout d'client">
+
+            <div class="input ajout d'client">
+
+              <span id="title input">Nom</span>
+
+              <input name="TEST" value="" id="nom" class="ajout d'client"/>
 
             </div>
 
-            <div id="container input ajout d'indice">
+            <div class="input ajout d'client">
 
-              <div class="input ajout d'indice">
+              <span id="title input">Abreviation</span>
 
-                <span id="title input">Indice</span>
-
-                <input name="TEST" value="" id="indice" class="ajout d'indice"/>
-
-              </div>
-
-              <div class="input ajout d'indice">
-
-                <span id="title input">Date Parution</span>
-
-                <input name="TEST" value="" id="date parution" class="ajout d'indice"/>
-
-              </div>
-
-              <div class="input ajout d'indice">
-
-                <span id="title input">Date BT</span>
-
-                <input name="TEST" value="" id="date bt" class="ajout d'indice"/>
-
-              </div>
-
-             </div>
-
-            <div id="container submit">
-
-              <button type="button" class="button1" id="button ajout indice" onclick="ajout_indice();">Sauvegarder</button>
+              <input name="TEST" value="" id="abreviation" class="ajout d'client"/>
 
             </div>
 
-        </nav>
+            <div class="input ajout d'client">
+
+              <span id="title input">Adresse</span>
+
+              <input name="TEST" value="" id="adresse" class="ajout d'client"/>
+
+            </div>
+
+           </div>
+
+          <div id="container submit">
+
+            <button type="button" class="button1" id="button ajout client" onclick="ajout_client();">Sauvegarder</button>
+
+          </div>
+
+      </nav>
 
        </div>
 
        <script type="application/json" src="/index.js" async></script>
-       <script src="/js/script_indice_bt.js" async></script>
+       <script src="/js/script_client.js" async></script>
 
     </body>
 
